--- a/profile.html
+++ b/profile.html
@@ -69,7 +69,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
+
+
+
+    <script>
+        document.getElementById("back-icon").addEventListener("click", function() {
+        
+        window.location.href = "chat.html";
+      });
+        </script>
+          
+
  <script>
+
+
 
      document.addEventListener("DOMContentLoaded", function() {
         const imageUpload = document.getElementById("imageUpload");
