--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ button#glogin {
                     localStorage.setItem("emailID", user.email);
                     localStorage.setItem("photoURL", user.photoURL);
                     alert("User Login: " + user.displayName);
-                    window.location.href = 'chat.html';
+                    window.location.href = 'index file all /chat.html';
                 }).catch((error) => {
                     
                     const errorCode = error.code;
@@ -188,7 +188,7 @@ button#glogin {
                     localStorage.setItem("Name", user.displayName);
                     localStorage.setItem("emailID", user.email);
                     localStorage.setItem("photoURL", user.photoURL);
-                    window.location.href = 'chat.html';
+                    window.location.href = 'index file all /chat.html';
                 }).catch((error) => {
                     
                     const errorCode = error.code;
