index file add'

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     localStorage.setItem("emailID", user.email);
                     localStorage.setItem("photoURL", user.photoURL);
                     alert("User Login: " + user.displayName);
-                    window.location.href = 'indexfile/chat.html';
+                    window.location.href = 'chat.html';
                 }).catch((error) => {
 
                     const errorCode = error.code;
@@ -165,7 +165,7 @@
                     localStorage.setItem("Name", user.displayName);
                     localStorage.setItem("emailID", user.email);
                     localStorage.setItem("photoURL", user.photoURL);
-                    window.location.href = 'indexfile/chat.html';
+                    window.location.href = 'chat.html';
                 }).catch((error) => {
 
                     const errorCode = error.code;
