--- a/chat.html
+++ b/chat.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="../js/chat.style.css">
+    <link rel="stylesheet" href="./../js/chat.style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -67,7 +67,7 @@
 
 
 
-<div class="card-3">
+ <div class="card-3">
     <div id="post-container">
    <div class="card-header">
     <img class="avatar" src="/img/whatsaap.jpeg" alt="User Avatar">
@@ -80,7 +80,7 @@
     
 </div>
 <div id="popoverContent" class="popover-content">
- <a href="./edit.html"><button class="popover-action-btn" onclick="edit(event)">Edit Post</button></a>
+ <button class="popover-action-btn" onclick="edit(event)">Edit Post</button>
   <button class="popover-action-btn">Delete Post</button>
 </div>
 
@@ -103,7 +103,7 @@
  
  <div id="posts"></div>
 
-    </div>  
+    </div> 
  
  
 
@@ -346,7 +346,7 @@ async function updateLikeCount(postId, newType, oldType = null) {
             <i class="fas fa-ellipsis-h nice-icon ml-auto popoverIcon"></i> 
           </div>
           <div class="popover-content">
-            <a href="./edit.html"><button class="popover-action-btn" data-post-id="${post.id}" onclick="editPost('${post.id}')">Edit Post</button></a>
+            <button class="popover-action-btn" data-post-id="${post.id}" onclick="editPost('${post.id}')">Edit Post</button>
            <button class="popover-action-btn" data-post-id="${post.id}" onclick="deletePost('${post.id}')">Delete Post</button>
     
           </div>
