--- a/chat.html
+++ b/chat.html
@@ -42,6 +42,324 @@
 }
 
 
+
+
+h1.text-center.teah {
+  font-size: 41px;
+  font-weight: 700;
+  display: flex;
+  color: #343a40;
+}
+
+.spne {
+margin-top: -19px;
+font-size: 29px;
+color: blue;
+font-weight: 700;
+margin-left: 78px;
+
+}
+
+.post-section {
+
+padding: 10px;
+
+}
+
+#post-form {
+margin-bottom: 10px;
+}
+
+#post-content {
+width: 100%;
+
+text-align: center;
+border: 1px solid blue;
+padding: 5px;
+border-radius: 3px;
+}
+
+/*  first pages and */
+
+
+/* button#post-button {
+
+  width: 40%;
+} */
+
+
+button.btn.btn-secondary {
+  width: 60%;
+  margin: 7px;
+  padding: 12px;
+  text-align: center;
+  background-color: #007bff;
+  border-radius: 10px;
+  font-size: 15px;
+}
+
+
+.post-btn {
+  align-items: center;
+  text-align: center;
+
+}
+.card-3 {
+width: auto;
+margin: 0 auto;
+background-color: #fff;
+
+}
+
+
+
+
+
+.card-header {
+display: flex;
+align-items: center;
+
+padding: 10px;
+}
+.user-name {
+  color: #212529;
+  font-size: 20px;
+  font-weight: normal;
+}
+.avatar {
+width: 50px;
+height: 50px;
+border-radius: 50%;
+}
+
+.user-info {
+margin-left: 10px;
+}
+
+.timestamp {
+font-size: 12px;
+color: #888;
+}
+
+.nice-icon {
+  margin-left: auto;
+  cursor: pointer;
+  font-size: 25px;
+  color: blue;
+}
+
+
+
+
+
+.card-body {
+
+padding: 10px;
+
+}
+
+.card-body .tweet-text {
+  font-size: 17px;
+  color: #333;
+  line-height: 1.5;
+  font-weight: 600;
+} 
+
+
+span.toipc {
+  color: blue;
+}
+
+
+.card-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border-top: 1px solid #212529;
+  border-bottom: 1px solid #212529;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin-top: 30px;
+}
+
+i.fa-regular.fa-heart {
+  position: relative;
+  font-size: 2em;
+  color: #828a90;
+  transition: color 0.2s ease-in-out; 
+  opacity: 0.7;
+}
+
+i.fa-regular.fa-face-smile {
+  position: relative;
+  border-right: 1px solid black;
+  border-left: 1px solid black;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 2em;
+  color: #0e84dd;
+  transition: color 0.2s ease-in-out;
+  opacity: 0.7;
+}
+
+i.fa-solid.fa-thumbs-up {
+  position: relative;
+  opacity: 0.7;
+  font-size: 2em;
+  color: #0e84dd;
+  transition: color 0.2s ease-in-out; /
+}
+
+
+i.fa-regular.fa-heart:hover {
+color: blue;
+}
+
+i.fa-regular.fa-face-smile:hover {
+color: #828a90;
+}
+
+i.fa-solid.fa-thumbs-up:hover {
+  color: blue; 
+}
+
+i.fa-regular.fa-heart:hover,
+i.fa-regular.fa-face-smile:hover,
+i.fa-solid.fa-thumbs-up:hover {
+  opacity: 1; 
+}
+.img-container {
+display: flex;
+
+justify-content: center;
+gap: 1px;
+margin-bottom: 20px;
+}
+
+.img-container img {
+max-width: 46%;
+height: auto;
+border-radius: 5px 4px 5px 4px;
+margin-top: 30px;
+} */
+
+
+
+.mobilebar-container {
+position: fixed;
+bottom: 0px;
+z-index: 12;
+left: 50%;
+transform: translateX(-50%);
+border: 1px solid blue;
+}
+
+.mobilebar-tab {
+height: 50px;
+
+width: 100vw;
+background-color: #fff;
+box-shadow: 0 10px 6px 0 rgba(0, 0, 0, 0.175);
+border-radius: 6px;
+overflow: hidden;
+border: 10px solid #fff;
+display: flex;
+position: relative;
+flex-shrink: 0;
+bottom: 0px;
+}
+
+.mobilebar-tab-item {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+width: 100%;     
+flex-shrink: 0;
+cursor: pointer;
+transition: 0.3s;
+position: relative;
+z-index: 2;
+}
+
+.mobilebar-tab-item.active {
+width: 105px;
+
+
+}
+
+
+
+.mobilebar-tab__icon {
+display: block;
+color: #051367;
+transition-duration: 0.3s;
+line-height: 1;
+}
+
+
+
+
+.popover-content {
+  display: none;
+}
+.popover-content.show {
+  display: block;
+}
+
+
+.show-popover {
+display: block;
+}
+
+
+.popover-action-btn {
+  display: block;
+  width: 35%;
+  padding: 6px 16px;
+  margin: 6px 0;
+  color: #373b3e;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: auto;
+  margin-top: -3px;
+  font-weight: 700;
+  font-size: 13px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </style>
  
 <div class="allchat">
