--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechX</title>
-    <link rel="shortcut icon" href="image/logo1-remove.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo1-remove.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./js/main.css">
+    <link rel="stylesheet" href="././js/main.css">
 </head>
 <body>
     <style>
@@ -84,7 +84,7 @@
     </style>
     <div class="container">
         <div>
-            <center><img src="/img/TechX_logo-remove.png" alt=""></center>
+            <center><img src="./img/TechX_logo-remove.png" alt=""></center>
         </div>
         <div>
             <div class="social-login">
