--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         const messaging = getMessaging(app, {
             vapidKey: "AAAAdwT_N08:APA91bEqk3mauwwbOjStFFgTErCKCWMzIoHEBLVCIcuwWvtc3a43dBvS2gVAsOy4BTFC6vhx8bNtrTaTAZ-tcZ2aG2Jguzc8RtsgSB6ciTqkJNOy3qfWNKMVNBB1ui1OWIPb9CZUWZ79",
             serviceWorkerRegistration: {
-                url: './firebase-messaging-sw.js',// Adjust the path based on your file location
+                url: 'firebase-messaging-sw.js',// Adjust the path based on your file location
             },
         });
         console.log(messaging, "messaging")
