base href added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/font-awesome.min.css">
     <link rel="stylesheet" href="././js/main.css">
+    <base href="/techexnew/" />
 </head>
 
 <body>
@@ -65,7 +66,7 @@
         const messaging = getMessaging(app, {
             vapidKey: "AAAAdwT_N08:APA91bEqk3mauwwbOjStFFgTErCKCWMzIoHEBLVCIcuwWvtc3a43dBvS2gVAsOy4BTFC6vhx8bNtrTaTAZ-tcZ2aG2Jguzc8RtsgSB6ciTqkJNOy3qfWNKMVNBB1ui1OWIPb9CZUWZ79",
             serviceWorkerRegistration: {
-                url: './techexnew/firebase-messaging-sw.js',// Adjust the path based on your file location
+                url: './firebase-messaging-sw.js',// Adjust the path based on your file location
             },
         });
         console.log(messaging, "messaging")
