--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Copy code
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,22 +6,15 @@ Copy code
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechX</title>
     <link rel="shortcut icon" href="./img/logo1-remove.png" type="image/x-icon">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha384-GLhlTQ8iowen0O8QIo94DJWw2H6Z5FmEV8M4A/A7Fjk5IxlVP8BO5S98tP1bpqL" crossorigin="anonymous">
-
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <!-- Your custom CSS -->
-    <link rel="stylesheet" href="././js/main.css">
-    <base href="/techexnew/">
-
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="...your_updated_integrity_value_here..." crossorigin="anonymous">
+    <link rel="stylesheet" href="./../js/main.css">
 </head>
 
 <body>
+   
     <div class="container">
         <div>
             <center><img src="./img/TechX_logo-remove.png" alt=""></center>
@@ -30,19 +22,23 @@ Copy code
         <div>
             <div class="social-login">
                 <center>
-                    <!-- Your existing buttons for Facebook and Google login -->
                     <button class="facebook" id="flogin">
-                        <!-- Facebook icon -->
-                        <i class="fab fa-facebook"></i>&emsp;LOG IN WITH FACEBOOK
-                    </button><br>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-facebook"
+                            viewBox="0 0 16 16">
+                            <path
+                                d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                        </svg>&emsp;LOG IN WITH FACEBOOK</button><br>
                     <button class="social-signin google" id="glogin">
-                        <!-- Google icon -->
-                        <i class="fab fa-google"></i>&emsp;LOG IN WITH GOOGLE
-                    </button>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-google"
+                            viewBox="0 0 16 16">
+                            <path
+                                d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z" />
+                        </svg>&emsp;LOG IN WITH GOOGLE</button>
                 </center>
             </div>
         </div>
     </div>
+
 
 
 
