--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="shortcut icon" href="./img/logo1-remove.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="...your_updated_integrity_value_here..." crossorigin="anonymous">
-    <link rel="stylesheet" href="./../js/main.css">
+
+    <link rel="stylesheet" href="././js/main.css">
 </head>
 
 <body>
