--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechX</title>
     <link rel="shortcut icon" href="./img/logo1-remove.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="././js/main.css">
 </head>
 
@@ -28,7 +27,7 @@
                             <path
                                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                         </svg>&emsp;LOG IN WITH FACEBOOK</button><br>
-                    <button class="social-signin google" id="glogin" \>
+                    <button class="social-signin google" id="glogin">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-google"
                             viewBox="0 0 16 16">
                             <path
@@ -36,9 +35,9 @@
                         </svg>&emsp;LOG IN WITH GOOGLE</button>
                 </center>
             </div>
-      
         </div>
     </div>
+
 
 
 
@@ -65,7 +64,7 @@
         const messaging = getMessaging(app, {
             vapidKey: "AAAAdwT_N08:APA91bEqk3mauwwbOjStFFgTErCKCWMzIoHEBLVCIcuwWvtc3a43dBvS2gVAsOy4BTFC6vhx8bNtrTaTAZ-tcZ2aG2Jguzc8RtsgSB6ciTqkJNOy3qfWNKMVNBB1ui1OWIPb9CZUWZ79",
             serviceWorkerRegistration: {
-                url: './firebase-messaging-sw.js',// Adjust the path based on your file location
+                url: '../firebase-messaging-sw.js',// Adjust the path based on your file location
             },
         });
         console.log(messaging, "messaging")
