--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechX</title>
+    <base href="/techexnew/">
     <link rel="shortcut icon" href="./img/logo1-remove.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -64,7 +65,7 @@
         const messaging = getMessaging(app, {
             vapidKey: "AAAAdwT_N08:APA91bEqk3mauwwbOjStFFgTErCKCWMzIoHEBLVCIcuwWvtc3a43dBvS2gVAsOy4BTFC6vhx8bNtrTaTAZ-tcZ2aG2Jguzc8RtsgSB6ciTqkJNOy3qfWNKMVNBB1ui1OWIPb9CZUWZ79",
             serviceWorkerRegistration: {
-                url: '../firebase-messaging-sw.js',// Adjust the path based on your file location
+                url: './firebase-messaging-sw.js',// Adjust the path based on your file location
             },
         });
         console.log(messaging, "messaging")
